...
                                    }
                                    Spacer()
                                }
                                
                                DatePicker("End of Day Time", selection: $endOfDayTime, displayedComponents: .hourAndMinute)
                                    .datePickerStyle(CompactDatePickerStyle())
                                    .accessibilityIdentifier("EndOfDayTimePicker")
                                    .onChange(of: endOfDayTime) { oldValue, newValue in
                                        let calendar = Calendar.current
                                        let comps = calendar.dateComponents([.hour, .minute], from: newValue)
                                        endOfDayTime = calendar.date(bySettingHour: comps.hour ?? 0, minute: comps.minute ?? 0, second: 0, of: Date()) ?? newValue
                                    }
                            }
...
                                        .foregroundColor(.secondary)
                                }
                                Spacer()
                                
                                Toggle("", isOn: $debugState.debug)
                                    .toggleStyle(SwitchToggleStyle(tint: .orange))
                                    .accessibilityIdentifier("DebugToggle")
                            }
                        }
                        .padding(20)
                        .themeAwareCard()
                        
                        // App Information Card
...
